gccida/c1/wipe_dead_reg
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/wipe_dead_reg/src/local-alloc.c:2594:20: error: use of undeclared identifier 'this_insn_0'; did you mean 'this_insn'?
if ( **( _WORD **)&this_insn_0[2] == 39 ) 
                   ^~~~~~~~~~~
                   this_insn
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/wipe_dead_reg/src/local-alloc.c:243:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/wipe_dead_reg/src/local-alloc.c:2596:21: error: use of undeclared identifier 'this_insn_0'; did you mean 'this_insn'?
if ( multiple_sets( this_insn_0) ) 
                    ^~~~~~~~~~~
                    this_insn
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/wipe_dead_reg/src/local-alloc.c:243:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/wipe_dead_reg/src/local-alloc.c:2598:32: error: use of undeclared identifier 'this_insn_0'; did you mean 'this_insn'?
v4 = **( int **)( *( _QWORD *)&this_insn_0[2] + 8LL); 
                               ^~~~~~~~~~~
                               this_insn
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/wipe_dead_reg/src/local-alloc.c:243:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/wipe_dead_reg/src/local-alloc.c:2604:47: error: use of undeclared identifier 'this_insn_0'; did you mean 'this_insn'?
v6 = *( _QWORD *)( *( _QWORD *)( *( _QWORD *)&this_insn_0[2] + 8LL) + 8 * v5 - 8); 
                                              ^~~~~~~~~~~
                                              this_insn
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/wipe_dead_reg/src/local-alloc.c:243:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/wipe_dead_reg/src/local-alloc.c:2626:31: error: use of undeclared identifier 'this_insn_0'; did you mean 'this_insn'?
regno_note = find_regno_note( this_insn_0, REG_INC, rtint); 
                              ^~~~~~~~~~~
                              this_insn
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/wipe_dead_reg/src/local-alloc.c:243:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/wipe_dead_reg/src/local-alloc.c:2632:21: error: use of undeclared identifier 'machine_mode'
mark_life( rtint, ( machine_mode)*( ( unsigned __int8 *)reg + 2), 0); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/wipe_dead_reg/src/local-alloc.c:2636:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)reg + 2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/wipe_dead_reg/src/local-alloc.c:2645:1: error: use of undeclared identifier 'qty_0'
qty_0[v12].death = v8 + 2 * this_insn_number; 
^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/wipe_dead_reg/src/obj/local-alloc.o] Error 1
